refactor/tail.txt
: the name `COLOR_GRASS` is defined multiple times
  --> src\render.rs:27:1
   |
26 | pub const COLOR_GRASS: u32 = 0xFF_2D_5A_27;
   | ------------------------------------------- previous definition of the value `COLOR_GRASS` here
27 | pub const COLOR_GRASS: u32 = 0xFF_4A_7C_3F;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `COLOR_GRASS` redefined here
   |
   = note: `COLOR_GRASS` must be defined only once in the value namespace of this module

error[E0425]: cannot find value `CELL_SIZE` in this scope
  --> src\render.rs:76:17
   |
76 |     let scale = CELL_SIZE * cam_zoom;
   |                 ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `CELL_SIZE` in this scope
   --> src\render.rs:311:25
    |
311 |                 scale / CELL_SIZE, // Normalizar escala para sprite
    |                         ^^^^^^^^^ not found in this scope

warning: unused imports: `BuildingType` and `Renderable`
  --> src\render.rs:18:29
   |
18 | use crate::ecs::{GameWorld, Renderable, Camera, ConstructionState, BuildingType, TrafficCar};
   |                             ^^^^^^^^^^                             ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `road_tile`
   --> src\render.rs:138:9
    |
138 |     let road_tile = atlas.categories.random_terrain(TerrainTileType::Road, &mut || 0);
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_road_tile`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `grid_col`
   --> src\texture_atlas.rs:602:5
    |
602 |     grid_col: u32,
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_grid_col`

warning: unreachable pattern
   --> src\texture_atlas.rs:764:9
    |
764 |         _ => 4,
    |         ^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> src\texture_atlas.rs:764:9
    |
756 |         png::ColorType::Rgba => 4,
    |         -------------------- matches some of the same values
757 |         png::ColorType::Rgb => 3,
    |         ------------------- matches some of the same values
758 |         png::ColorType::GrayscaleAlpha => 2,
    |         ------------------------------ matches some of the same values
759 |         png::ColorType::Grayscale => 1,
    |         ------------------------- matches some of the same values
...
764 |         _ => 4,
    |         ^ ...and 1 other patterns collectively make this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0425, E0428.
For more information about an error, try `rustc --explain E0425`.
warning: `citybound_native` (lib) generated 4 warnings
error: could not compile `citybound_native` (lib) due to 3 previous errors; 4 warnings emitted

